--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,18 +4,18 @@ version '1.0'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.3.1'
     }
 }
 
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -24,9 +24,10 @@ apply plugin: 'com.android.library'
 android {
     namespace 'top.huic.perfect_volume_control.perfect_volume_control'
 
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 16 
+        targetSdkVersion 31
     }
 }
